# ngrep

./: .gitignore  Cargo.toml  README.md
assets/: flatland.md  fruits.md
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  formatters.rs  main.rs  neural_matchers.rs
embeddings/: Cargo.toml
embeddings/src/: converters.rs  lib.rs  matchers.rs  models.rs  ng.rs
fancy-regex-neural/: Cargo.toml
fancy-regex-neural/benches/: bench.rs
fancy-regex-neural/examples/: toy.rs
fancy-regex-neural/src/: analyze.rs  compile.rs  error.rs  lib.rs  parse.rs  vm.rs
src/: commands.rs  displayers.rs  main.rs  neural_matchers.rs
