[package]
name = "ngrep"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
colored = "3.0.0"
clap = { version = "4.5.28", features = ["derive"] }
fancy-regex = { path = "fancy-regex-neural" }
embeddings = { path = "embeddings" }
serde = { version = "1.0.219", features = ["derive"] }
expanduser = "1.2.2"
toml = "0.8.23"
edit = "0.1.5"
toml_edit = "0.22.27"

[workspace]
resolver = "2"
members = [
    "embeddings",
    "fancy-regex-neural",
]
